fix horizontal scroll jumping bug (https://github.com/harvesthq/chosen/issues/450)

--- a/chosen/chosen.css
+++ b/chosen/chosen.css
@@ -132,8 +132,7 @@
 /* @end */
 
 .chzn-container-single-nosearch .chzn-search input {
-  position: absolute;
-  left: -9000px;
+  display: none;
 }
 
 /* @group Multi Chosen */
